update TODO after new plans

--- a/TODO
+++ b/TODO
@@ -1,5 +1,17 @@
 icfpc TODO:
 * выполнятор
+* IO
+* простая стратегия
+ * адресная атака по строящимся и списку
+publih
+* другие атаки
+ * повторяющиеся команды
+ * help
+ * усиленная команда
+ * цикл
+\NewEntry
+old TODO
+
 * стратегия
  * перебор
  * простые ограничения (число ходов, число ячеек)
