--- a/TODO
+++ b/TODO
@@ -1,6 +1,10 @@
 icfpc TODO:
-* выполнятор
-* IO
+~ выполнятор (сейчас уже непонятно нужен ли)
++ IO
+* усовершенствуй атаку, чтобы работала
+* bootstrap
+publish
+
 * простая стратегия
  * адресная атака по строящимся и списку
 publih
