--- a/TODO
+++ b/TODO
@@ -2,7 +2,10 @@ icfpc TODO:
 ~ выполнятор (сейчас уже непонятно нужен ли)
 + IO
 * усовершенствуй атаку, чтобы работала
+ + сделай аккумулятор на много в #0
 * bootstrap
+ + kernel package (?)
+ + network image
 publish
 
 * простая стратегия
